test/corpus/Lotka-Volterra.ka.test
=======================
Lotka-Volterra
=======================

%var: rabbitbirth 2.1
%var: rabbiteaten 0.4
%var: foxbirth 0.01

%agent: Rabbit()
%agent: Fox()

// These rabbits reproduce asexually
'rabbits born'  Rabbit(), . -> Rabbit(), Rabbit() @ rabbitbirth
// Foxes die of natural causes
'foxes died'    Fox() -> . @ foxdeath
// Foxes reproduce by eating a rabbit
'foxes born'    Fox(), Rabbit(), . -> Fox(), ., Fox() @ foxbirth

%obs: 'Rabbits' |Rabbit()|
%obs: 'Foxes'   |Fox()|

--- 

(root
  (variable_declaration
    (declared_variable_name
      (variable_name
        (name)))
    (algebraic_expression
      (float)))
  (variable_declaration
    (declared_variable_name
      (variable_name
        (name)))
    (algebraic_expression
      (float)))
  (variable_declaration
    (declared_variable_name
      (variable_name
        (name)))
    (algebraic_expression
      (float)))
  (signature_declaration
    (signature_expression
      (agent_name
        (name))))
  (signature_declaration
    (signature_expression
      (agent_name
        (name))))
  (comment)
  (f_rule
    (label)
    (f_rule_chem
      (rule_expression
        (agent
          (agent_name
            (name)))
        (more
          (more)
          (agent
            (agent_name
              (name))))
        (agent
          (agent_name
            (name))))
      (rate
        (algebraic_expression
          (declared_variable_name
            (variable_name
              (name)))))))
  (comment)
  (f_rule
    (label)
    (f_rule_chem
      (rule_expression
        (agent
          (agent_name
            (name)))
        (more))
      (rate
        (algebraic_expression
          (declared_variable_name
            (variable_name
              (name)))))))
  (comment)
  (f_rule
    (label)
    (f_rule_chem
      (rule_expression
        (agent
          (agent_name
            (name)))
        (more
          (agent
            (agent_name
              (name)))
          (more
            (more)
            (agent
              (agent_name
                (name)))))
        (agent
          (agent_name
            (name))))
      (rate
        (algebraic_expression
          (declared_variable_name
            (variable_name
              (name)))))))
  (observable_declaration
    (label)
    (algebraic_expression
      (reserved_variable_name
        (pattern
          (agent
            (agent_name
              (name)))))))
  (observable_declaration
    (label)
    (algebraic_expression
      (reserved_variable_name
        (pattern
          (agent
            (agent_name
              (name))))))))
